<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Onzeo</string>
  <string name="widget_label">Onzeo</string>
  <string name="widget_subtitle">Application club et widget Android</string>
  <string name="widget_description">Widget Android Onzeo avec dernier match et prochain rendez-vous.</string>
  <string name="widget_last_match">Dernier match</string>
  <string name="widget_next_match">Prochain match</string>
  <string name="widget_admin">Admin</string>
  <string name="widget_refresh">MAJ</string>
  <string name="setup_description">Onzeo affiche le club choisi et permet un rafraichissement manuel du widget Android.</string>
  <string name="endpoint_label">Flux embarque dans Onzeo</string>
  <string name="setup_help">Pour un build club, l URL du widget est injectee a la compilation. Les membres peuvent changer de club depuis le bouton de selection publique.</string>
  <string name="refresh_button">Rafraichir</string>
  <string name="select_club_button">Choisir le club</string>
  <string name="admin_button">Ouvrir l admin</string>
  <string name="status_idle">Onzeo est pret a configurer le widget Android.</string>
  <string name="status_saved">Configuration enregistree. Mise a jour du widget en cours.</string>
  <string name="status_invalid">Saisis une URL valide.</string>
  <string name="status_loading">Chargement du club en cours.</string>
  <string name="status_error">Impossible de contacter le flux widget.</string>
  <string name="status_cached">Flux indisponible, derniere version locale affichee.</string>
  <string name="status_placeholder">Renseigne ton URL de production avant installation club.</string>
  <string name="status_embedded">Onzeo est preconfigure et pret a etre ajoute a l ecran d accueil.</string>
  <string name="admin_title">Administration club</string>
  <string name="admin_url_label">Page admin embarquee</string>
  <string name="admin_loading">Chargement de l espace admin...</string>
  <string name="admin_loaded">Espace admin charge.</string>
  <string name="admin_load_error">Impossible de charger la page admin.</string>
  <string name="selector_title">Choisir le club</string>
  <string name="selector_url_label">Page de selection embarquee</string>
  <string name="selector_loading">Chargement du choix de club...</string>
  <string name="selector_loaded">Selection de club disponible.</string>
  <string name="selector_load_error">Impossible de charger la selection de club.</string>
  <string name="admin_dialog_title">Acces admin</string>
  <string name="admin_dialog_message">Entre le mot de passe admin pour ouvrir la gestion du club.</string>
  <string name="admin_password_hint">Mot de passe</string>
  <string name="admin_open_button">Ouvrir</string>
  <string name="admin_access_granted">Acces admin autorise.</string>
  <string name="admin_access_denied">Mot de passe admin incorrect.</string>
  <string name="widget_missing_next">En attente de calendrier officiel.</string>
  <string name="widget_missing_last">Aucun resultat recent.</string>
  <string name="widget_open_app">Ouvrir l application</string>
  <string name="widget_compact_pending">Le dernier score s affichera ici.</string>
  <string name="widget_standing_label">Classement</string>
  <string name="widget_standing_empty">Classement non disponible.</string>
  <string name="widget_standing_meta">%1$s pts - %2$s matchs - Diff %3$s</string>
  <string name="widget_standing_window">%1$s-%2$s / %3$s</string>
  <string name="widget_standing_up">&#9650;</string>
  <string name="widget_standing_down">&#9660;</string>
</resources>
